Fixed pseudo content in hero overflowing body.

--- a/wp-content/themes/machineguntheme/assets/css/sass/_mobile.scss
+++ b/wp-content/themes/machineguntheme/assets/css/sass/_mobile.scss
@@ -70,7 +70,9 @@
 		padding-top: 2em;
 
 		&:after {
+			content: none;
 			background-color: transparent;
+			display: none;
 		}
 	}
 
@@ -85,7 +87,8 @@
 
 			&:after {
 				background-color: transparent;
-				
+				display: none;
+				content: none;
 			}
 		}
 
